Added foundation framework to the project

--- a/COMP2068-Lesson3/index.html
+++ b/COMP2068-Lesson3/index.html
@@ -5,6 +5,7 @@
     <title>Foundation Boilerplate</title>
     <!--CSS Section-->
     <link href="CSS/reset.css" rel="stylesheet" />
+    <link href="CSS/foundation.min.css" rel="stylesheet" />
     <link href="CSS/main.css" rel="stylesheet" />
 </head>
 <body>
@@ -12,6 +13,11 @@
         <h1>Foundation Boilerplate</h1>
     </header>
     <!--Javascript Section-->
+    <script src="JS/vendor/jquery.js"></script>
+    <script src="JS/foundation.min.js"></script>
+    <script>
+        $(document).foundation();
+    </script>
     <script src="JS/main.js"></script>
 </body>
 </html>
